infrastructure/dev/nginx/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-controller
  namespace: nginx
  annotations:
    # See frontend-config.yaml.
    networking.gke.io/v1beta1.FrontendConfig: nginx-controller
    ingress.gcp.kubernetes.io/pre-shared-cert: staging-fdk-digdir-no-ssl-2, demo-fdk-digdir-no-ssl-2, stjerne-dev-fdk-digdir-no-ssl-4, stjerne-api-staging-fdk-digdir-no-ssl-4, stjerne-api-demo-fdk-digdir-no-ssl-4
    kubernetes.io/ingress.global-static-ip-name: digdir-fdk-dev-staging-subnet-v4
spec:
  tls:
    - secretName: stjerne-staging-fdk-digdir-no-tls
      hosts:
        - "*.staging.fellesdatakatalog.digdir.no"
        - staging.fellesdatakatalog.digdir.no
    - secretName: stjerne-demo-fdk-digdir-no-tls
      hosts:
        - "*.demo.fellesdatakatalog.digdir.no"
        - demo.fellesdatakatalog.digdir.no
    - secretName: stjerne-dev-fdk-digdir-no-tls
      hosts:
        - "*.dev.fellesdatakatalog.digdir.no"
    - secretName: stjerne-api-staging-fdk-digdir-no-tls
      hosts:
        - "*.api.staging.fellesdatakatalog.digdir.no"
    - secretName: stjerne-api-demo-fdk-digdir-no-tls
      hosts:
        - "*.api.demo.fellesdatakatalog.digdir.no"
  rules:
    - http:
        paths:
          - backend:
              service:
                name: nginx-nginx-ingress-nginx-controller
                port:
                  number: 80
            path: /
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-controller-v6
  namespace: nginx
  annotations:
    # See frontend-config.yaml.
    networking.gke.io/v1beta1.FrontendConfig: nginx-controller
    ingress.gcp.kubernetes.io/pre-shared-cert: staging-fdk-digdir-no-ssl-2, demo-fdk-digdir-no-ssl-2, stjerne-dev-fdk-digdir-no-ssl-4, stjerne-api-staging-fdk-digdir-no-ssl-4, stjerne-api-demo-fdk-digdir-no-ssl-4
    kubernetes.io/ingress.global-static-ip-name: digdir-fdk-dev-staging-subnet-v6
spec:
  tls:
    - secretName: stjerne-staging-fdk-digdir-no-tls
      hosts:
        - "*.staging.fellesdatakatalog.digdir.no"
        - staging.fellesdatakatalog.digdir.no
    - secretName: stjerne-demo-fdk-digdir-no-tls
      hosts:
        - "*.demo.fellesdatakatalog.digdir.no"
        - demo.fellesdatakatalog.digdir.no
    - secretName: stjerne-dev-fdk-digdir-no-tls
      hosts:
        - "*.dev.fellesdatakatalog.digdir.no"
    - secretName: stjerne-api-staging-fdk-digdir-no-tls
      hosts:
        - "*.api.staging.fellesdatakatalog.digdir.no"
    - secretName: stjerne-api-demo-fdk-digdir-no-tls
      hosts:
        - "*.api.demo.fellesdatakatalog.digdir.no"
  rules:
    - http:
        paths:
          - backend:
              service:
                name: nginx-nginx-ingress-nginx-controller
                port:
                  number: 80
            path: /
            pathType: Prefix
